# faas_platform

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yaml  env-configmap.yaml  pyproject.toml  pytest.ini  values.yaml
.github/workflows/: build.yaml
alembic/: env.py
alembic/versions/: 2025-07-22_add_initial_models.py  2025-07-24_update_expire_at_type.py  2025-07-26_update_function_pk.py  2025-07-29_add_initial_models.py  2025-08-04_cascade_on_function_model.py  2025-08-04_fix_relationship_cascade.py
app/: main.py
app/templates/: kaniko.yaml.j2
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  container.py  main.py
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
function_templates/: service.yaml
function_templates/python/: Dockerfile  func.py
helm/faas-platform/: Chart.yaml  values.yaml
k8s/: faas-backend.yaml
k8s/cloudflared/: tunnel.yaml
k8s/faas/: deployment.yaml  kanikoRole.yaml  namespace.yaml  networkPolicy.yaml  role.yaml  roleBinding.yaml  service.yaml  serviceAccount.yaml
k8s/minio/: kustomization.yaml
scripts/: create_test_db.sh  generate-client.sh  github_secrets_env.sh  in_cluster_migrations.sh
scripts/kaniko/: s3-storage-secret.example.yaml
src/: config.py  container.py  database.py  db_migrate.py  dependencies.py  logging.py  main.py  models.py  scheduler.py
src/container/: enums.py  models.py  service.py
src/faas/: config.py  main.py
src/function/: enums.py  models.py  scheduled.py  service.py  views.py
(+71 files in other folders)
