[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "alembic>=1.16.4",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "boto3>=1.38.13",
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "kubernetes>=32.0.1",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "moto[s3]>=5.1.8",
    "pytest>=8.4.1",
]
